force-app/main/default/objects/Invoice__c/fields/InvoiceIssuer__c.field-meta.xml
<CustomField>
    <fullName>InvoiceIssuer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Invoice issuer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>IssuedInvoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>