force-app/main/default/objects/Invoice__c/fields/InvoiceReceiver__c.field-meta.xml
<CustomField>
    <fullName>InvoiceReceiver__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Invoice receiver</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices (Invoice receiver)</relationshipLabel>
    <relationshipName>ReceivedInvoices</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>