force-app/main/default/objects/Invoice__c/fields/IsIssued__c.field-meta.xml
<CustomField>
    <fullName>IsIssued__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is issued?</label>
    <type>Checkbox</type>
</CustomField>