force-app/main/default/objects/Invoice__c/fields/PayDate__c.field-meta.xml
<CustomField>
    <fullName>PayDate__c</fullName>
    <description>Calculates pay date based on issue date.</description>
    <formula>IssueDate__c + 14</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pay date</label>
    <type>Date</type>
</CustomField>