force-app/main/default/objects/Invoice__c/fields/TotalValue__c.field-meta.xml
<CustomField>
    <fullName>TotalValue__c</fullName>
    <label>Total value</label>
    <summarizedField>Invoice_position__c.Sum__c</summarizedField>
    <summaryForeignKey>Invoice_position__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>