force-app/main/default/objects/Invoice__c/validationRules/Cannot_create_issued_invoice.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_create_issued_invoice</fullName>
    <active>true</active>
    <description>Cannot create invoice marked as issued. Add positions firstly.</description>
    <errorConditionFormula>ISNEW() &amp;&amp;  IsIssued__c</errorConditionFormula>
    <errorMessage>Can&apos;t create issued invoice.</errorMessage>
</ValidationRule>