force-app/main/default/objects/Invoice__c/validationRules/Cannot_unmark_issued_invoice.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_unmark_issued_invoice</fullName>
    <active>true</active>
    <description>Can&apos;t unmark the issued invoice.</description>
    <errorConditionFormula>PRIORVALUE(IsIssued__c) &amp;&amp; !IsIssued__c</errorConditionFormula>
    <errorMessage>Invoice has already been issued.</errorMessage>
</ValidationRule>